Need to fix spacing of elements in header

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,11 +2,14 @@
 body{
     background-color: white;
     background-image: url(../img/floral-dance-seamless.png);
-    backdrop-filter: invert(1);
     background-size: 40dvw;
     overflow: hidden auto;
     margin: 0px;
     height: 150dvh;
+    width: 100%;
+    padding: 0;
+    backdrop-filter: invert(1);
+    position: relative;
 }
 body::-webkit-scrollbar {
     display: none;
@@ -14,40 +17,50 @@ body::-webkit-scrollbar {
 header, footer{
     width: 100%;
     margin: 0%;
-    height: 7dvh;
-    background: linear-gradient(whitesmoke, gray);
+    height: 15dvh;
+    background: linear-gradient(Black, #5E503f);
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: 700;
-    font-size: 3vh;
+    font-size: 5dvh;
+
+}
+nav {
+    height: 100%;
 }
 footer {
     position: absolute;
-    bottom: 0dvw;
+    bottom: 0px;
+    height: 5dvh;
+    padding: 2dvh 5dvw ;
 }
-header a{
-    color: black;
+a {
+    color: #EAE0D5;
     text-decoration: none;
-    text-shadow: 1px 1px 20px black;
+    text-shadow: 5px 5px 5px black;
+    padding: 50% 0;
 }
 main {
-    background-color: rgba(161, 161, 161, 0.9);
-    padding: 20px;
-    margin: 75px;
+    background-color: #5E503F;
+    padding: 4dvh 2dvw;
+    margin: 6dvh 4dvw;
+    width: 88dvw;
 }
 .grid-container {
     display: grid;
     grid-template-columns: auto auto;
-    background-color: green;
+    background-color: #162227;
     padding: 4dvh 1dvw;
+    margin: 2dvh 0 0 0;
 }
 .grid-item {
-    background-color: aquamarine;
-    color: black;
-    padding: 30px;
+    background-color: #C6AC8F;
+    padding: 3dvh 5dvw;
     border: 2px solid black;
     text-align: center;
-    font-size: 5dvh;
+    vertical-align: middle;
+    font-size: 6vmin;
     margin: 20px;
+    box-shadow: 3px 3px 20px inset;
 }
 .slideshow {
     display: flex;
@@ -67,21 +80,24 @@ main {
 }
 ul {
    margin: 0;
-}
-#logo {
-    padding:  0 0 0;
+   height: 100%;
+   padding: 0;
+   display: inline-flex;
+   
+   vertical-align: middle;
 }
 li {
-    color: black;
     display: inline;
-    padding: 1dvh 3dvw;
+    padding: 0 3dvw;
     text-decoration: none;
+    height: 100%;
 }
-li:hover {
-    
+li img {
+    top: 1dvh;
 }
 a img {
-    height: 4dvh;
+    height: 100%;
+    filter: invert(1);
 }
 .dropdown {
     position: relative;
@@ -89,17 +105,17 @@ a img {
     
 }
 li.dropdown {
-    display:
+    height: 100%;
 }
 
 .dropdown-content {
     right: 0;
-    top: 7dvh;
+    top: auto;
     display: none;
     position: fixed;
-    background: linear-gradient(gray, rgb(87, 86, 86));
+    background: #5E503f;
     z-index: 1;
-    font-size: 2dvw;
+    font-size: 2dvh;
     text-align: center;
     text-shadow: 5px 1px 3px white;
 }
@@ -112,9 +128,10 @@ li.dropdown {
     display: flex;
     flex-direction: column;
     text-decoration: none;
-    padding: 2dvw 1dvw;
+    padding: 3dvh 1dvw;
     align-content: end;
 }
 .dropdown-content a:hover {
     background-color: gray;
 }
+
